Set project name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(NEURAL_REEL_SATURATOR VERSION 0.0.1)
+set(PROJECT_NAME NeuralReelSaturator)
+
+project(${PROJECT_NAME} VERSION 0.0.1)
 
 
 # find_package(JUCE CONFIG REQUIRED)        # If you've installed JUCE to your system
@@ -10,38 +12,36 @@ add_subdirectory(JUCE)                      # If you've put JUCE in a subdirecto
 # If you are building a VST2 or AAX plugin, CMake needs to be told where to find these SDKs on your
 # system. This setup should be done before calling `juce_add_plugin`.
 
-# juce_set_vst2_sdk_path(...)
-# juce_set_aax_sdk_path(...)
+# Set the plugin formats you'll be building here.
+# Valid formats: AAX Unity VST AU AUv3 Standalone
+set(FORMATS AU VST3)
 
-set(FormatsToBuild VST3)
-
-juce_add_plugin(NeuralReelSaturator
+juce_add_plugin(${PROJECT_NAME}
     COPY_PLUGIN_AFTER_BUILD TRUE
     # VST3_COPY_DIR C:/Program Files/Common Files/VST3
     PLUGIN_MANUFACTURER_CODE Juce
     PLUGIN_CODE Mute
-    FORMATS ${FormatsToBuild}
+    FORMATS ${FORMATS}
     PRODUCT_NAME "Akai4000DB-PreAmp")
 
 # Set language version
-target_compile_features (NeuralReelSaturator PRIVATE cxx_std_14)
+target_compile_features (${PROJECT_NAME} PRIVATE cxx_std_14)
 
 # create a JuceHeader.h
-juce_generate_juce_header(NeuralReelSaturator)
+juce_generate_juce_header(${PROJECT_NAME})
 
 # add sources
 add_subdirectory(Source)
 include_directories(Source)
 add_subdirectory(Resources)
 
-# `target_compile_definitions` adds some preprocessor definitions to our target. In a Projucer
-# project, these might be passed in the 'Preprocessor Definitions' field. JUCE modules also make use
-# of compile definitions to switch certain features on/off, so if there's a particular feature you
-# need that's not on by default, check the module header for the correct flag to set here. These
-# definitions will be visible both to your code, and also the JUCE module code, so for new
-# definitions, pick unique names that are unlikely to collide! This is a standard CMake command.
+# Build LV2 only on Linux
+if(UNIX AND NOT APPLE)
+    message(STATUS "Building LV2 plugin format")
+    list(APPEND JUCE_FORMATS LV2)
+endif()
 
-target_compile_definitions(NeuralReelSaturator PUBLIC
+target_compile_definitions(${PROJECT_NAME} PUBLIC
     # JUCE_WEB_BROWSER and JUCE_USE_CURL would be on by default, but you might not need them.
     JUCE_DISPLAY_SPLASH_SCREEN=0
     JUCE_REPORT_APP_USAGE=0
@@ -50,7 +50,7 @@ target_compile_definitions(NeuralReelSaturator PUBLIC
     JUCE_VST3_CAN_REPLACE_VST2=0)
 
 
-target_link_libraries (NeuralReelSaturator PRIVATE
+target_link_libraries (${PROJECT_NAME} PRIVATE
     # JUCE Modules
     juce::juce_audio_processors
     juce::juce_audio_plugin_client
